--- a/Countrys/Views/Home/Index.cshtml
+++ b/Countrys/Views/Home/Index.cshtml
@@ -232,7 +232,7 @@
                         <h2>Paises do <b>Mundo</b></h2>
                     </div>
 
-                    <button id="export" data-export="export">Export</button>
+                    <button id="export" data-export="export">Exportt</button>
 
                     <div class="col-sm-7">
                         <a href="#" class="btn btn-secondary"><i class="material-icons">&#xE24D;</i> <span>Exportar</span></a>
